Removing and editing comments added to front
UserProfile is dead
