# server/src/user/users.controller.ts
@@ -1,4 +1,12 @@
-import { Body, Controller, Post } from '@nestjs/common';
+import {
+  Body,
+  Controller,
+  Get,
+  Param,
+  Post,
+  Request,
+  UseGuards,
+} from '@nestjs/common';
 import { UsersService } from './users.service';
 import {
   ApiBody,
@@ -10,9 +18,32 @@ import {
 } from '@nestjs/swagger';
 import { CreateUserDto } from 'src/auth/dto/create-user.dto';
 import { LoginUserDto } from 'src/auth/dto/login-user.dto';
+import { AuthGuard } from '@nestjs/passport';
+import { User } from './schema/user.schema';
+import { VideosService } from '../video/videos.service';
 
 @ApiTags('users')
 @Controller('users')
 export class UsersController {
-  constructor(private readonly usersService: UsersService) {}
+  constructor(
+    private readonly usersService: UsersService,
+    private readonly videosService: VideosService,
+  ) {}
+
+  @Get()
+  @UseGuards(AuthGuard('jwt'))
+  async getUser(@Request() req) {
+    const userId = req.user._id.toString();
+    return await this.usersService.getUserById(userId);
+  }
+
+  @Get(':id')
+  async getUserById(@Param('id') id: string) {
+    return await this.usersService.getUserById(id);
+  }
+
+  @Get(':id/video')
+  async getVideo(@Param('id') id: string) {
+    return await this.videosService.getVideoByUserId(id);
+  }
 }
